# dlsys

./: .gitignore
hw0/: hw0.ipynb
hw0/src/: simple_ml.py  simple_ml_ext.cpp
hw1/: hw1.ipynb
hw1/apps/: simple_ml.py
hw1/python/needle/: autograd.py
hw1/python/needle/ops/: ops_mathematic.py
hw1/tests/: test_nn_epoch.py
hw2/: hw2.ipynb  test.ipynb
hw2/apps/: mlp_resnet.py
hw2/python/needle/: optim.py
hw2/python/needle/init/: init_basic.py  init_initializers.py
hw2/python/needle/nn/: nn_basic.py
hw2/python/needle/ops/: ops_logarithmic.py
hw3/: CMakeLists.txt  Makefile  build_debug.sh  compile_commands.json  hw3.ipynb
hw3/python/needle/backend_ndarray/: ndarray.py
hw3/src/: ndarray_backend_cpu.cc  ndarray_backend_cuda.cu
hw3/tests/: test_runner.py
